[fix] Fixed TreeView overflow issue.

--- a/packages/common-theme/TreeView.scss
+++ b/packages/common-theme/TreeView.scss
@@ -62,6 +62,7 @@
       .fv-TreeView--item-label {
         flex-shrink: 0;
         width: 100%;
+        flex: 1;
         display: flex;
         align-items: center;
         .fv-TreeView--item-label-icon {
